replace sun.misc.BASE64Encode to java.util.Base64
replace sun.misc.BASE64Encode to java.util.Base64