@@ -4,7 +4,11 @@ package com.wsk.life.token;
  * Created by Maibenben on 2017/4/28.
  */
 
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Encoder;
+
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
 import javax.servlet.http.HttpServletRequest;
 import java.security.MessageDigest;
@@ -47,8 +51,12 @@ public class TokenProccessor {
             MessageDigest md = MessageDigest.getInstance("md5");
             byte[] md5 = md.digest(token.getBytes());
             //base64编码--任意二进制编码明文字符   adfsdfsdfsf
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+//            BASE64Encoder encoder = new BASE64Encoder();
+//            return encoder.encode(md5);
+            //Base64 encode the byte array
+            Base64.Encoder encoder = Base64.getEncoder ();
+            //Return Base64 encoded byte array string
+            return encoder.encodeToString ( md5 );
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
